cruds changed for es client

--- a/PrimitiveApi/PrimitiveApi/appsettings.json
+++ b/PrimitiveApi/PrimitiveApi/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ElasticSearch": {
+    "ConnectionUri": "http://localhost:9200",
+    "Indexes": {
+      "ProductsIndex": "products"
+    }
+  }
 }
