--- a/PrimitiveApi/PrimitiveApi/PrimitiveApi.csproj
+++ b/PrimitiveApi/PrimitiveApi/PrimitiveApi.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Elasticsearch.Net" Version="7.10.1" />
+    <PackageReference Include="NEST" Version="7.10.1" />
+  </ItemGroup>
+
 </Project>
